# focus-backend-engineer-exercises-new

./: .gitignore  README.md  openapi.yaml  pyproject.toml
.devcontainer/: devcontainer.json
backend_engineer_interview/: __main__.py  app.py  handlers.py  models.py
tests/: conftest.py  test_backend_engineer_interview.py
