[tool.poetry]
name = "backend-engineer-interview"
version = "0.1.0"
description = ""
authors = ["Michael Kalish <michael.kalish@focusconsulting.io>"]

[tool.poetry.dependencies]
python = "^3.12.3"
connexion = {extras = ["flask", "mock", "swagger-ui", "uvicorn"], version = "^3.0.6"}
mypy = "^1.9.0"
sqlalchemy = "^2.0.29"
pydantic = "^2.7.0"


[tool.poetry.group.dev.dependencies]
freezegun = "^1.4.0"
alembic = "^1.13.1"
pytest = "^8.1.1"
isort = "^5.13.2"
black = "^24.4.2"
mypy = "^1.11.0"
flake8 = "^7.1.0"

[tool.black]
line-length = 100

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100

[tool.mypy]
color_output = true
error_summary = true
namespace_packages = true
pretty = true
show_column_numbers = true
show_error_context = true
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

plugins = [
  "pydantic.mypy"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
